# cpp-shared

./: CMakeLists.txt  LazyAlloctor.hpp  LazyFsm.h  README.md  TcpPipe.hpp  cpp-shared.pro  cpp-shared.pro.user.65b80f7  factory.cpp  factory.hpp  interface.hpp  logger.h  logger.hpp  main.cpp  observer.hpp  pipeline.hpp  pluginloader.h  realloctor.hpp  singleton.hpp  tcppipe.hpp  test_observer.cpp
src/: LazyAlloctor.hpp  LazyFsm.h  buffer.hpp  factory.hpp  log.hpp  observer.hpp  pipeline.hpp  pluginloader.h  singleton.hpp  spinlock.h  tcppipe.hpp
tcpserver/: CMakeLists.txt
tcpserver/src/: clientd.cpp  clienthandler.cpp  clienthandler.h  packet.h  serverd.cpp  serverhandler.cpp  serverhandler.h  socket.hpp  tcpclient.cpp  tcpclient.h  tcphandler.cpp  tcphandler.h  tcpserver.cpp  tcpserver.h
test/: main.cpp  observer.cpp
testplugin/: main  main.cpp  makefile
testplugin/lib/: animal.cpp  animal.h  animal_impl.h  build.sh  makefile
